--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <button type="submit" id="submitBtn">Submit</button>
     </form>
   </div>
-
+  <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
   <script>
     const translations = {
       en: {
