--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
     <div class="icon">🌍</div>
     <h1 id="title">TripUnity User Survey</h1>
     <form id="survey-form" method="POST"
-      action="https://script.google.com/macros/s/AKfycbyFb_Am82xtosYEA7e9aUomaddFNcLxYlCWUSXugdBPyWD5pL1qykCpfAeOD86Fdeke/exec"
-      target="hidden_iframe" onsubmit="formSubmitted()">
+      action="https://script.google.com/macros/s/AKfycbyFb_Am82xtosYEA7e9aUomaddFNcLxYlCWUSXugdBPyWD5pL1qykCpfAeOD86Fdeke/exec">
       <label id="langLabel" for="language">Select your preferred language</label>
       <select id="language" name="language" required>
         <option value="en">English</option>
@@ -158,7 +157,7 @@
       <button type="submit" id="submitBtn">Submit</button>
     </form>
   </div>
-  <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+
   <script>
     const translations = {
       en: {
@@ -226,10 +225,6 @@
       });
     });
 
-    function formSubmitted() {
-      alert("🎉 Your response has been submitted successfully!");
-      document.getElementById("survey-form").reset(); // Optional: Reset form
-    }
 
     // Google Sheet integration (replace YOUR_SCRIPT_ID)
     // const form = document.getElementById('survey-form');
@@ -247,6 +242,14 @@
     //     alert("Something went wrong.");
     //   });
     // });
+
+    // add event listner if while page load urld contains return=1 show alert
+    window.addEventListener('load', () => {
+      const urlParams = new URLSearchParams(window.location.search);
+      if (urlParams.get('return') === '1') {
+        alert("🎉 Your response has been submitted successfully!");
+      }
+    });
   </script>
 </body>
 
