--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="icon">🌍</div>
     <h1 id="title">TripUnity User Survey</h1>
     <form id="survey-form" method="POST"
-      action="https://script.google.com/macros/s/AKfycbyFb_Am82xtosYEA7e9aUomaddFNcLxYlCWUSXugdBPyWD5pL1qykCpfAeOD86Fdeke/exec">
+      action="https://script.google.com/macros/s/AKfycbyFb_Am82xtosYEA7e9aUomaddFNcLxYlCWUSXugdBPyWD5pL1qykCpfAeOD86Fdeke/exec" target="_self"> 
       <label id="langLabel" for="language">Select your preferred language</label>
       <select id="language" name="language" required>
         <option value="en">English</option>
